--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
 	"version": "0.3.2",
 	"description": "Fullstack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
 	"dependencies": {
+		"htmljs" : "1.0.0",
 		"bootstrap": "~3",
 		"angular": "~1.2",
 		"angular-resource": "~1.2",
